[package]
name = "fluid_simulator"
version = "0.1.0"
authors = ["Ritoban Roy-Chowdhury <ritobanrc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
rand = "0.8.3"
num = "0.3.1"
winit = "0.22"
wgpu = "0.8.0"
futures = "0.3"
bytemuck = { version = "1.5", features = [ "derive" ] }
structopt = "0.3"
image = "0.23.4"
smallvec = "1.6.1"
itertools = "0.10.0"
rayon = "1.5.0"
nalgebra = "0.27.1"

[build-dependencies]
anyhow = "1.0"
shaderc = "0.7"
glob = "0.3"
