[package]
name = "fluid_simulator"
version = "0.1.0"
authors = ["Ritoban Roy-Chowdhury <ritobanrc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.29", features = [ "serde-serialize", "rand"] }
nalgebra-sparse = "0.5.0"
rand = "0.8.3"
num = "0.3.1"
winit = "0.25"
wgpu = "0.8.0"
futures = "0.3"
bytemuck = { version = "1.5", features = [ "derive" ] }
structopt = "0.3"
image = "0.23.4"
smallvec = "1.6.1"
itertools = "0.10.0"
rayon = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

egui = "0.12.0"
epi = "0.12.0"
egui_wgpu_backend = "0.8.0"
egui_winit_platform = "0.8.0"

eyre = "0.6.5"

[build-dependencies]
eyre = "0.6.5"
shaderc = "0.7"
glob = "0.3"

[dev-dependencies]
proptest = "1.0.0"
